@@ -8,8 +8,6 @@ import org.camunda.bpm.engine.delegate.JavaDelegate;
 import org.camunda.spin.Spin;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.stream.Collectors;
-
 @Log4j2
 public class FindProductsDelegate implements JavaDelegate {
     @Autowired
@@ -18,7 +16,7 @@ public class FindProductsDelegate implements JavaDelegate {
     @Override
     public void execute(DelegateExecution delegateExecution) throws Exception {
         var products = productDataRepository.findAll();
-        var productsIds = products.stream().map(ProductDao::getId).collect(Collectors.toList());
+        var productsIds = products.stream().map(ProductDao::getId).toList();
 
         delegateExecution.setVariable("productsIds", Spin.JSON(productsIds));
         log.info("Products List Size: {}", products.size());
